--- a/fwup.conf
+++ b/fwup.conf
@@ -64,6 +64,9 @@ file-resource i2c-mux.dtbo {
 file-resource tc358743.dtbo {
     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/tc358743.dtbo"
 }
+file-resource gpio-poweroff.dtbo {
+    host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/gpio-poweroff.dtbo"
+}
 
 file-resource rootfs.img {
     host-path = ${ROOTFS}
@@ -176,6 +179,7 @@ task complete {
     on-resource ov5647.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/ov5647.dtbo") }
     on-resource i2c-mux.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/i2c-mux.dtbo") }
     on-resource tc358743.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/tc358743.dtbo") }
+    on-resource gpio-poweroff.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/gpio-poweroff.dtbo") }
 
     on-resource rootfs.img {
         # write to the first rootfs partition
@@ -248,6 +252,7 @@ task upgrade.a {
     on-resource ov5647.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/ov5647.dtbo") }
     on-resource i2c-mux.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/i2c-mux.dtbo") }
     on-resource tc358743.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/tc358743.dtbo") }
+    on-resource gpio-poweroff.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/gpio-poweroff.dtbo") }
 
     on-resource rootfs.img {
         delta-source-raw-offset=${ROOTFS_B_PART_OFFSET}
@@ -328,6 +333,7 @@ task upgrade.b {
     on-resource ov5647.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/ov5647.dtbo") }
     on-resource i2c-mux.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/i2c-mux.dtbo") }
     on-resource tc358743.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/tc358743.dtbo") }
+    on-resource gpio-poweroff.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/gpio-poweroff.dtbo") }
 
     on-resource rootfs.img {
         delta-source-raw-offset=${ROOTFS_A_PART_OFFSET}
